--- a/style.css
+++ b/style.css
@@ -6,3 +6,9 @@ html, body {
 #map {
   height: 100%;
 }
+button {
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+    cursor:pointer;
+}
